@@ -20,24 +20,25 @@
 #ifndef ANONYMOUS_CHECK_PLUGIN_H
 #define ANONYMOUS_CHECK_PLUGIN_H
 
-#include "plugins/generic-plugin.h"
+#include "plugin/plugin-root-component.h"
 
 namespace AnonCheck
 {
 	class AnonymousCheck;
 }
 
-class AnonymousCheckPlugin : public QObject, public GenericPlugin
+class AnonymousCheckPlugin : public QObject, public PluginRootComponent
 {
 	Q_OBJECT
-	Q_INTERFACES(GenericPlugin)
+	Q_INTERFACES(PluginRootComponent)
+	Q_PLUGIN_METADATA(IID "im.kadu.PluginRootComponent")
 
 	AnonCheck::AnonymousCheck *AnonymousCheckInstance;
 
 public:
 	virtual ~AnonymousCheckPlugin();
 
-	virtual int init(bool firstLoad);
+	virtual bool init(bool firstLoad);
 	virtual void done();
 
 };
