@@ -1,3 +1,7 @@
+2014-06-30  Rafał Malinowski <rafal.przemyslaw.malinowski@gmail.com>
+
+	* Plugin made compatible with Kadu 1.0.
+
 2011-12-28  Bartosz Brachaczek <b.brachaczek@gmail.com>
 
 	* Plugin made compatible with Kadu 0.11.
